修改樣式完成

--- a/component/button/button.module.scss
+++ b/component/button/button.module.scss
@@ -99,7 +99,7 @@
 
 .file {
   position: relative;
-  input[type='file'] {
+  input[type="file"] {
     position: absolute;
     display: none;
   }
