--- a/component/navbar/navbar.module.scss
+++ b/component/navbar/navbar.module.scss
@@ -1,25 +1,26 @@
 /* 上方欄位 - bar */
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+  height: var(--header);
   display: flex;
-  justify-content: space-between;
   align-items: center;
   background-color: var(--white);
   padding-inline: 2vw;
-  padding-block: 1vw;
-  gap: 50px;
   color: black;
-  .header_f {
+  .header_btn {
     display: flex;
-    justify-content: space-between;
     gap: 16px;
-    width: 150px;
     > button {
       cursor: pointer;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 5px;
+      gap: 8px;
       width: 50px;
       height: 50px;
       i {
@@ -32,46 +33,28 @@
   }
   .logo {
     width: 100%;
-    height: var(--header);
-    min-width: 90px;
+    height: 70%;
     cursor: pointer;
-    div {
-      background-image: url("/images/logo.svg");
-      background-repeat: no-repeat;
-      background-size: contain;
-      width: 100%;
-      height: 100%;
-    }
-  }
-}
-@media screen and (max-width: 768px) {
-  .header {
-    .header_f {
-      > button {
-        i {
-          font-size: 16px;
-        }
-        span {
-          font-size: 12px;
-        }
-      }
-    }
+    background-image: url("/images/logo.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
   }
 }
 
 /* 左側欄位 - bar */
 .navbar {
-  width: var(--sidebar-width);
   background-color: var(--white);
   font-weight: bolder;
   transition: all 0.4s ease;
   position: relative;
   white-space: nowrap;
-  .title {
-    display: flex;
-    justify-content: center;
+  padding-top: var(--header);
+  height: 100vh;
+  .navbar_title {
     font-size: 24px;
-    padding-block: 20px;
+    padding-block: 16px;
+    padding-inline: 24px;
+    text-align: center;
     .one {
       color: var(--main-blue);
     }
@@ -80,20 +63,15 @@
     }
   }
 
-  .navbar_body {
-    width: 100%;
-    overflow-x: hidden;
-  }
-
   ul {
-    padding-inline: 14px;
+    padding-inline: 16px;
     li {
       width: 100%;
       display: flex;
       align-items: center;
       gap: 10px;
+      padding: 2px 5px;
       padding-block: 0.8vh;
-      padding-inline: 0.8vw;
 
       &:not(:first-child):hover {
         background-color: var(--main-blue-light-op08);
@@ -122,30 +100,24 @@
       border-radius: 50%;
       min-width: 30px;
     }
+    &.open {
+      font-size: 60px;
+      transform: rotate(0);
+      bottom: 0;
+      filter: drop-shadow(-2px -1px #0000002b);
+    }
+    &.close {
+      font-size: 40px;
+      transform: rotate(180deg);
+      bottom: calc(50vh - var(--header));
+      filter: drop-shadow(2px -3px #0000002b);
+    }
   }
-  .barOpen {
-    font-size: 60px;
-    transform: rotate(0);
-    bottom: 0;
-    filter: drop-shadow(-2px -1px #0000002b);
-  }
-  .barClose {
-    font-size: 40px;
-    transform: rotate(180deg);
-    bottom: calc(50vh - var(--header));
-    filter: drop-shadow(2px -3px #0000002b);
-  }
-  &.navbar_open {
+  &.open {
     width: var(--sidebar-width);
   }
-  &.navbar_close {
+  &.close {
     width: 80px;
-  }
-}
-
-@media screen and (min-width: 1400px) {
-  .bar {
-    display: none;
   }
 }
 @media screen and (max-width: 1200px) {
@@ -153,105 +125,24 @@
     display: none;
   }
 }
-
-// 手機板的選單
-.mobile_menu {
-  display: none;
-  width: 100%;
-  transition: all 0.3s ease-in-out;
-  .title {
-    display: block;
-    font-size: 40px;
-    text-align: center;
-    font-weight: bolder;
-    padding-top: 30px;
-    padding-bottom: 20px;
-    > * {
-      padding: 6px;
-    }
-    &.title_blue {
-      color: var(--main-blue);
-    }
-    &.title_orange {
-      color: var(--main-orange);
-    }
-  }
-  ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-    height: calc(100vh - var(--header) - var(--footer) - 20vh);
-    overflow-y: auto;
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none;
-    &::-webkit-scrollbar {
-      display: none; /* Chrome, Safari, Opera */
-    }
-    li {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      transition: all 0.5s ease-in-out;
-      width: 100%;
-      max-width: 60%;
-      padding-block: 2vh;
-      border-radius: 99px;
-      border: 3px solid var(--white);
-      font-size: 24px;
-      font-weight: bolder;
-      cursor: pointer;
-    }
-    .li_orange {
-      background: var(--main-orange-light-op05);
-      &:hover {
-        background: var(--main-orange-light);
-        border: 3px solid var(--main-orange);
-      }
-    }
-    .li_blue {
-      background: var(--main-blue-light-op05);
-      &:hover {
-        background: var(--main-blue-light);
-        border: 3px solid var(--main-blue);
-      }
-    }
-  }
-}
-@media screen and (max-width: 1200px) {
-  .mobile_menu {
-    display: inline-block;
-  }
-}
-@media screen and (max-width: 768px) {
-  .mobile_menu {
-    ul {
-      height: calc(100vh - var(--header) - var(--footer) - 30vh);
-      li {
-        max-width: 100%;
-      }
-    }
-  }
-}
-
 /* 下方欄位 - bar */
 .footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   background-color: var(--white);
-  display: none;
-  justify-content: space-around;
   height: var(--footer);
+  display: none;
   div {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: 8px;
     cursor: pointer;
     span {
-      font-size: 14px;
+      font-size: 12px;
     }
     i {
       font-size: 24px;
@@ -263,27 +154,87 @@
     display: flex;
   }
 }
-@media screen and (max-width: 992px) {
-  .footer {
-    div {
-      span {
-        font-size: 13px;
+
+// 手機板的選單
+.mobile_menu {
+  display: none;
+  width: 100%;
+  transition: all 0.3s ease-in-out;
+  .mobile_menu_title {
+    display: block;
+    font-size: 32px;
+    text-align: center;
+    font-weight: bolder;
+    margin-block: 2rem;
+    &.blue {
+      color: var(--main-blue);
+    }
+    &.orange {
+      color: var(--main-orange);
+    }
+    i {
+      padding-inline: 0.8rem;
+    }
+  }
+  ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 2rem;
+    gap: 30px;
+    overflow-y: auto;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none; /* Chrome, Safari, Opera */
+    }
+    li {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.5s ease-in-out;
+      width: 100%;
+      max-width: 60%;
+      padding-block: 16px;
+      border-radius: 99px;
+      border: 3px solid var(--white);
+      font-size: 24px;
+      font-weight: bolder;
+      cursor: pointer;
+    }
+    .orange {
+      background: var(--main-orange-light-op05);
+      &:hover {
+        background: var(--main-orange-light);
+        border: 3px solid var(--main-orange);
       }
-      i {
-        font-size: 22px;
+      &:active {
+        color: var(--white);
+        background: var(--main-orange);
+      }
+    }
+    .blue {
+      background: var(--main-blue-light-op05);
+      &:hover {
+        background: var(--main-blue-light);
+        border: 3px solid var(--main-blue);
+      }
+      &:active {
+        color: var(--white);
+        background: var(--main-blue);
       }
     }
   }
 }
+@media screen and (max-width: 1200px) {
+  .mobile_menu {
+    display: inline-block;
+  }
+}
 @media screen and (max-width: 768px) {
-  .footer {
-    div {
-      span {
-        font-size: 12px;
-      }
-      i {
-        font-size: 18px;
-      }
-    }
+  .mobile_menu ul li {
+    max-width: 100%;
   }
 }
