--- a/component/nosharable/setting/workway/work-card.module.scss
+++ b/component/nosharable/setting/workway/work-card.module.scss
@@ -10,7 +10,7 @@
   .col_work_card {
     position: relative;
   }
-  #workcard_nextbtn_swiper {
+  #workcard_next-btn_swiper {
     float: right;
     padding: 30px 40px 0 0;
     margin-top: auto;
