--- a/component/nosharable/equitment/equitment-set.module.scss
+++ b/component/nosharable/equitment/equitment-set.module.scss
@@ -1,6 +1,6 @@
 .l_equitment {
   width: 100%;
-  height: 100%;
+  height: 90%;
   border-radius: 30px;
   background: var(--white-op08);
   padding: 2rem;
@@ -152,6 +152,7 @@
     background: transparent;
     padding: 0;
     .l_title {
+      padding: 2rem;
       background-color: var(--white-op08);
       border-radius: 20px 20px 0 0;
       .l_title_switch {
