--- a/component/nosharable/info/info.module.scss
+++ b/component/nosharable/info/info.module.scss
@@ -1,25 +1,28 @@
 .l_left_info {
-  // width: 20%;
+  width: 20%;
   height: auto;
   background: var(--white-op08);
   border-radius: 30px;
   padding-block: 2vh;
   padding-inline: 1vw;
+  margin-right: 5%;
+  &.height {
+    height: 90%;
+  }
   h6 {
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bolder;
   }
-
   .left_info_title {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-    font-size: 20px;
+    gap: 8px;
+    font-size: 18px;
     font-weight: bolder;
     height: 80px;
     img {
-      max-width: 50px;
+      max-width: 30px;
       width: 100%;
       object-fit: contain;
     }
@@ -27,27 +30,36 @@
   .left_info_content {
     display: flex;
     flex-direction: column;
-    height: calc(100% - 100px);
+    height: calc(100% - 80px);
     overflow-y: auto;
-    > div {
-      padding-block: 5px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 12px;
+    .left_info_text {
       cursor: pointer;
-      span {
-        width: 30px;
+      > div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        h6 {
+          font-size: 16px;
+        }
       }
-    }
-    > p {
-      padding: 8px 0 10px 0;
+      p {
+        text-align: center;
+        padding: 1.2rem 0rem;
+      }
+      i {
+        border-radius: 36px;
+        padding: 6px;
+        background: #189e56;
+        color: var(--white);
+      }
     }
     .block {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      background: gold;
     }
     .left_info_content_btn {
       margin-top: auto;
@@ -377,36 +389,65 @@
 @media screen and (max-width: 1200px) {
   .l_left_info {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding-inline: 2rem;
+    margin-bottom: 20px;
+    .left_info_title {
+      &.none {
+        display: none;
+      }
+    }
     .left_info_content {
-      flex-direction: initial;
+      height: auto;
+      flex-direction: row;
+      justify-content: center;
+      gap: 16px;
       flex-wrap: wrap;
-      min-height: auto;
-
-      > div {
-        width: 150px;
-        // height: 60px;
-        margin: auto;
-        // padding-block: 0;
-        margin-block: 5px;
+      .left_info_text {
+        height: auto;
+        display: flex;
+        > div {
+          width: 200px;
+        }
+        p {
+          display: none;
+        }
       }
-      .eq_execute {
-        width: 100%;
-      }
-      .left_info_state {
+      .block {
+        display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
+      .left_info_content_btn {
+        margin-top: auto;
+        align-self: flex-end;
+        button {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          cursor: pointer;
+          i {
+            background: transparent;
+            color: black;
+            font-size: 26px;
+            &:hover {
+              color: rgba(163, 147, 147, 0.8);
+            }
+          }
+        }
+      }
+
       // 異常訊號
       .log {
-        width: 200px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start !important;
+        padding-left: 20px;
+        line-height: 60%;
         span {
-          top: 0;
-          padding-top: 5px;
+          position: absolute;
+          left: 0px;
+          top: 15px;
         }
       }
     }
@@ -487,25 +528,25 @@
   .l_left_info_min_width {
     min-width: auto;
   }
+}
 
-  .left_info_content {
-    .left_info_content_btn {
-      // justify-content: flex-end;
-      align-items: flex-end;
-      button {
+@media screen and (max-width: 568px) {
+  .l_left_info {
+    .left_info_content {
+      align-items: center;
+      justify-content: center;
+      p {
         display: flex;
-        align-items: center;
         justify-content: center;
-        cursor: pointer;
-        i {
-          background: transparent;
-          color: black;
-          font-size: 26px;
-          &:hover {
-            color: rgba(163, 147, 147, 0.8);
-          }
+      }
+      .left_info_text {
+        > div {
+          width: 300px;
         }
       }
+    }
+    .left_info_content_btn {
+      justify-content: center;
     }
   }
 }
