--- a/component/nosharable/list/list.module.scss
+++ b/component/nosharable/list/list.module.scss
@@ -3,8 +3,8 @@
   width: 65%;
   height: 100%;
   border-radius: 20px;
-  padding-block: 16px;
-  padding-inline: 20px;
+  padding: 16px 20px;
+  margin-right: 5%;
   position: relative;
 
   &.col_list_bg {
@@ -15,7 +15,10 @@
     align-items: center;
     justify-content: space-between;
     > div:first-child {
-      width: 20vw;
+      width: 100%;
+      height: 100%;
+      min-width: 80px;
+      max-width: 180px;
     }
   }
   .list_model_title {
@@ -24,6 +27,9 @@
     grid-template-columns: 30px auto 200px;
     grid-template-rows: 25px;
   }
+}
+.col_list_mt {
+  margin-top: 50px;
 }
 // 加工清單用
 .list_radius {
@@ -37,7 +43,7 @@
   .chosen_list_data {
     background: var(--white);
     width: 100%;
-    height: 85%;
+    height: 75%;
     border-radius: 20px;
     padding: 30px 20px;
     display: flex;
@@ -102,6 +108,7 @@
   .col_list {
     width: 100%;
     padding: 0;
+    padding-top: 20px;
     &.col_list_bg {
       background: transparent;
     }
@@ -112,6 +119,7 @@
       margin-bottom: 16px;
       > div:first-child {
         width: 100%;
+        max-width: 100%;
       }
       div:not(:first-child),
       button {
@@ -124,14 +132,16 @@
       padding: 25px;
     }
   }
-
-  .list_radius {
-    border-radius: 20px;
-    > :last-child {
-      display: none;
+  .chosen_list_data {
+    &.col_list_mt {
+      margin-top: 0;
     }
   }
+  .list_radius {
+    border-radius: 20px;
+  }
   .chosen_list {
+    margin-top: 12px;
     width: 100%;
     > div:first-child {
       height: auto;
