--- a/component/nosharable/model/camera-create.module.scss
+++ b/component/nosharable/model/camera-create.module.scss
@@ -15,7 +15,7 @@
 // 點
 .fail {
   width: 100%;
-  height: calc(100% - 100px);
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
