--- a/component/nosharable/setting/setting.module.scss
+++ b/component/nosharable/setting/setting.module.scss
@@ -1,5 +1,6 @@
 .l_right_setting {
-  flex: 1;
+  width: 100%;
+  height: 90%;
   background: var(--white-op08);
   border-radius: 30px;
   padding: 3%;
@@ -7,11 +8,14 @@
   display: flex;
   flex-direction: column;
   .col_right_setting {
+    width: 100%;
     display: flex;
+    justify-content: space-between;
     > div {
-      padding: 20px;
+      width: 250px;
+      margin-right: 40px;
       > div {
-        padding-block: 10px;
+        padding-block: 16px;
       }
     }
   }
@@ -57,6 +61,7 @@
 }
 
 .flex_text {
+  width: 300px;
   display: flex;
   align-items: center;
   white-space: nowrap;
@@ -65,31 +70,29 @@
 
 @media screen and (max-width: 1200px) {
   .l_right_setting {
+    height: auto;
     align-items: center;
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .l_right_setting {
     .col_right_setting {
-      display: block;
+      padding-block: 24px;
       > div {
-        padding: 15px;
+        width: 400px;
         > div {
-          padding-block: 8px;
+          padding-block: 18px;
         }
       }
     }
   }
-  .flex_text {
-    justify-content: center;
-  }
 }
 
-@media screen and (max-width: 576px) {
-  .flex_text {
-    input {
-      width: 50px;
+@media screen and (max-width: 768px) {
+  .l_right_setting {
+    .col_right_setting {
+      flex-direction: column;
+      align-items: center;
+      > div {
+        width: auto;
+        margin: 0;
+      }
     }
   }
 }
